# Pokedia

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
scripts/: convert-hackrom-data.mjs
src/: App.tsx  index.css  liquid-glass-react.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/games/: emerald-imperium.json  radical-red.json  runbun.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_add_species_id.sql  003_add_natures_abilities.sql  004_game_selector.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/api/: abilities.rs  client.rs  evolution.rs  items.rs  mod.rs  moves.rs  natures.rs  pokemon.rs  species.rs  types.rs
src-tauri/src/cache/: abilities.rs  evolution.rs  games.rs  items.rs  mod.rs  moves.rs  natures.rs  pokemon.rs  types.rs
src-tauri/src/commands/: abilities.rs  favorites.rs  games.rs  items.rs  mod.rs  moves.rs  natures.rs  pokemon.rs  settings.rs  sync.rs  types.rs
src-tauri/src/models/: abilities.rs  games.rs  items.rs  mod.rs  moves.rs  natures.rs  pokemon.rs  settings.rs  sync.rs  types.rs
src-tauri/src/sync/: engine.rs
src/components/: ErrorBoundary.tsx
src/hooks/: use-abilities.ts  use-favorites.ts  use-game-import.ts  use-games.ts  use-items.ts  use-moves.ts  use-natures.ts  use-page-title.ts  use-pokemon.ts  use-prefetch.ts  use-sync-invalidation.ts  use-sync.ts  use-types.ts
src/lib/: ability-matchups.ts  constants.ts  motion.ts  pokemon-utils.ts  tauri.ts  type-chart.ts
(+47 files in other folders)
