[package]
name = "pokedia"
version = "0.3.1"
description = "Pokémon Encyclopedia"
authors = ["mehdi"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pokedia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-window-state = "2.4.1"
